--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %} {% block body %}
 
+<!-- Display User name and other details -->
 <div class="row mt-5 justify-content-center">
     <div class="col-auto h5">
         Welcome {{user_name}}, this is your dashboard
@@ -10,22 +11,27 @@
         Last logged in: {{last_login_time}} <br>
     </div>
 </div>
+
+<!-- Button to create tracker -->
 <div class="row mt-2 justify-content-center">
     <div class="col-auto">
-        <a class="btn btn-success" href="/tracker/{{user_name}}">Create a new tracker</a>
+        <a class="btn btn-warning" href="/tracker/{{user_name}}">Create a new tracker</a>
     </div>
 </div>
+
 <div class="row mt-3 justify-content-center">
     <div class="col-auto">
-        <h2 class="h2">List of trackers</h2>
+        <h2 class="h2">Trackers you made so far</h2>
     </div>
 </div>
+
+<!-- Display all the trackers -->
 <div class="row justify-content-center">
     {% for tracker in usertrackers %}
     <div class="col-auto mr-3 mt-3 d-flex justify-content-center">
         <div class="row justify-content-center text-center">
             <div class="col-auto">
-                <div class="p-3 border-light border rounded">
+                <div class="p-3 border-dark border rounded bgTracker">
                     Name - {{tracker["tracker_name"]}} <br>
                     Last recorded - {{tracker["tracker_log_time"]}} <br>
                     Description - {{tracker["tracker_description"]}} <br>
@@ -33,8 +39,7 @@
                     {% if tracker["tracker_type"] == "boolean_tracker"%}Type - Yes/No{% endif %}
                     {% if tracker["tracker_type"] == "mo_tracker"%}Type - Multiple Options{% endif %}
                     {% if tracker["tracker_type"] == "time_tracker"%}Type - Time Duration{% endif %} <br>
-                    <a class="btn btn-primary mt-4 mb-2" href='/trackerdetails/{{tracker["tracker_id"]}}'>Details</a>
-                    <br>
+                    <a class="btn btn-light mt-4 mb-2" href='/trackerdetails/{{tracker["tracker_id"]}}'>Details</a><br>
                     <a class="btn btn-danger mt-2 mb-2" href='/deletetracker/{{tracker["tracker_id"]}}'>Remove</a> <br>
                 </div>
             </div>
@@ -43,9 +48,10 @@
     {% endfor %}
 </div>
 
+<!-- log out button -->
 <div class="row justify-content-center">
     <div class="col-auto">
-        <a class="btn btn-danger mt-5" href="/logout//{{user_name}}">Log Out</a>
+        <a class="btn btn-secondary mt-5" href="/logout//{{user_name}}">Log Out</a>
     </div>
 </div>
 
