--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <title>{{title}}</title>
 </head>
 
-<body class="fs-5 bgImage">
+<body class="fs-5 bgImage text-white">
     {% block body %}{% endblock %}
 </body>
 <script src="../static/myscript.js"></script>
