--- a/templates/trackerdetails.html
+++ b/templates/trackerdetails.html
@@ -22,7 +22,7 @@
 
 <div class="row mt-2 justify-content-center">
     <div class="col-auto">
-        <a href="#" class="btn btn-success" onclick="document.getElementById('edittrackerform').classList.toggle('d-none')">
+        <a href="#" class="btn btn-light" onclick="showTrackerForm()">
             Edit Tracker Details (toggle)
         </a>
     </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="row mt-3 justify-content-center">
             <div class="col-auto">
-                <button form="record_value" class="btn btn-primary" type="submit">Add Value</button>
+                <button form="record_value" class="btn btn-warning" type="submit">Add Value</button>
             </div>
         </div>
 
@@ -102,7 +102,7 @@
                 </div>
                 <div class="row mt-2 justify-content-center">
                     <div class="col-auto">
-                        <button form="editlogdetails" class="btn btn-primary" type="submit">Confirm Edit</button>
+                        <button form="editlogdetails" class="btn btn-warning" type="submit">Confirm Edit</button>
                     </div>
                 </div>
             </div>
@@ -112,15 +112,17 @@
     <!-- This is the table for log details of a tracker -->
 
     <div class="col col-sm-12 col-md-12 col-xl-7">
-        <table class="table thead-light table-dark table-bordered table-hover text-center table-responsive align-middle">
-            <tr class="table-primary">
-                <th>ID number</td>
-                <th>Value</td>
-                <th>Notes</th>
-                <th>Date</td>
-                <th>Action</th>
-                <th class="d-none" id="hiddenHeader">Edit</th>
-            </tr>
+        <table class="table text-white table-bordered text-center table-responsive align-middle">
+            <thead class="thead-dark">
+                <tr>
+                    <th>ID number</th>
+                    <th>Value</th>
+                    <th>Notes</th>
+                    <th>Date</th>
+                    <th>Action</th>
+                    <th class="d-none" id="hiddenHeader">Edit</th>
+                </tr>
+            </thead>
             <tbody>
                 {% for userlog in user_logs%}
                 <tr>
