--- a/templates/login.html
+++ b/templates/login.html
@@ -2,19 +2,19 @@
 
 {% block body %}
 <div class="row justify-content-center bg-primary">
-    <div class="col-auto mt-5 mb-5">
+    <div class="col-auto mt-5">
         <h1 class="text-white">Quantified Self App</h1>
     </div>
 </div>
 
+{% if login_error_msg != "" %}
 <div class="row justify-content-center">
-    {% if login_error_msg != "" %}
     <div class="col-12 col-md-auto">
         {{login_error_msg}}
     </div>
     <br>
-    {% endif %}
 </div>
+{% endif %}
 
 <div class="row justify-content-center">
 
